fix(TextField): alignment

--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -11,7 +11,8 @@
   }
 
   label {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     margin-bottom: 8px;
     font-size: 14px;
     color: #666;
